# dat

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  contributing.md  justfile  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
dat/: create_reference_tables.py  external_tables.py  generated_tables.py  main.py  models.py  spark_builder.py  table_definitions.py
dat/model/: metadata.py  row_collections.py  table.py  write_mode.py
dat/writers/: create_reference_tables.py  external_tables_writer.py  generated_tables_writer.py  metadata_writer.py  spark_writer.py
envs/: dat-pyspark-322-delta-200.yml  pyspark-322-delta-200.yml
external-tables/my_external_table/delta/_delta_log/: .00000000000000000001.json.crc
external-tables/my_external_table/delta/letter=a/: .part-00000-0cec84a3-d3a9-4ea2-9805-3fd5d7e25a5a.c000.snappy.parquet.crc  part-00000-0cec84a3-d3a9-4ea2-9805-3fd5d7e25a5a.c000.snappy.parquet
external-tables/my_external_table/delta/letter=b/: part-00001-4ddd089e-eea9-4897-a589-db01985913e4.c000.snappy.parquet
my_external_table/: table-metadata.json
reference_tables/reference_table1/: table_content.parquet
reference_tables/reference_table1/table/: part-00000-31184423-4085-45e1-99ff-1c42c700e079-c000.snappy.parquet  part-00003-1482182b-ef1d-43df-83c8-e44c0cfc9334-c000.snappy.parquet  part-00004-9168d0a4-1f77-42f0-b466-5c055dc68e22-c000.snappy.parquet  part-00006-bf3fa912-9007-4aff-90f3-5a7e6e18ebe3-c000.snappy.parquet  part-00009-1e57e8eb-3864-4b4c-82d3-fd8a4f3ac02c-c000.snappy.parquet  part-00009-625d4428-7f4c-4841-ad2e-b09b254c43d3-c000.snappy.parquet
reference_tables/reference_table2/: table_content.parquet
src/dat/: generated_tables.py  main.py  models.py  spark_builder.py
tests/: conftest.py  test_delta_lake.py
tests/model/: test_reference_table.py
tests/pyspark_delta/: test_pyspark_delta.py  test_pyspark_writer.py
tests/writers/: conftest.py  test_external_tables_writer.py  test_generated_tables_writer.py  test_metadata_writer.py  test_spark_writer.py
util/: compare.py
(+2 files in other folders)
