[tool.poetry]
name = "dat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
pyspark = "^3.5.1"
click = "^8.1.7"
delta-spark = "^3.1.0"
rootpath = "^0.1.1"
pyarrow = "^15.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^8.1.1"
coverage = "^7.4.4"
autopep8 = "^2.1.0"
mypy = "^1.9.0"
bandit = "^1.7.8"
unify = "^0.5"
chispa = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
