[project]
name = "dat"
version = "0.0.3"
description = "Accetance testing for Delta Lake implementations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["deltalake", "delta", "acceptance"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.11.7,<3.0.0",
    "pyspark>=4.0.0,<5.0.0",
    "delta-spark>=4.0.0,<5.0.0",
    "click>=8.2.1,<9.0.0",
    "pyarrow>=21",
    "typer>=0.16.0",
]

[project.scripts]
dat = "dat.main:app"

[project.urls]
repository = "https://github.com/delta-incubator/dat"

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["ruff"]
test = ["pytest", "chispa>=0.11.1"]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
